# transilienwatcher

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  config.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  rer_watcher.py  settings.env.dist  settings.ini.dist  test_rer_watcher.py
.github/workflows/: ci.yml
requirements/: dev.req  prod.req
rerwatcher/: __init__.py  __main__.py  api.py  app.py  daemon.py  display.py  exceptions.py  formatter.py  transilien.py  transilien_api.py  utils.py
tests/: __init__.py  conftest.py  context.py  fixture.xml  fixture_with_status.xml  test_api.py  test_app.py  test_configuration.py  test_configuration_schema.py  test_daemon.py  test_display.py  test_display_device.py  test_formatter.py  test_rerwatcher.py  test_transilien.py  test_transilien_api.py
tests/configs/: config.yml  invalid.yml
transilienwatcher/: Makefile  README.md  __init__.py  __main__.py  app.py  cli.py  configuration.py  daemon.py  display.py  error_handlers.py  exceptions.py  pyproject.toml  transilien.py
transilienwatcher/tests/: conftest.py  fixture.xml  test_app.py  test_configuration.py  test_configuration_schema.py  test_daemon.py  test_display.py  test_transilien.py
